# full-stack-fastapi-template

./: .code-workspace  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  compose.override.yml  compose.prod.yml  compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  await_db.py  initial.py  pyproject.toml  run_dev.py  run_main.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_07_1757-a6d7900b60c4_add_auth_models.py
backend/scripts/: generate_jwt_keys.sh  prestart.sh
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/api_v1/: __init__.py
backend/src/auth/: dependencies.py  exceptions.py
backend/src/auth/api/: docs.py  routes.py  schemas.py
backend/src/auth/application/: __init__.py  auth_backend.py  auth_manager.py  init.py  instance.py  user_service.py
backend/src/auth/domain/: interfaces.py
backend/src/auth/domain/entities/: __init__.py  user.py  user_profile.py
backend/src/auth/infra/: security.py  unitofwork.py
backend/src/auth/infra/models/: __init__.py  association_role_permissions.py  auth_permission.py  auth_role.py  types.py  user_orm.py  user_profile_orm.py  user_role_assignment.py
backend/src/auth/infra/repositories/: __init__.py  user_profile_repository.py  user_repository.py
backend/src/auth/infra/strategies/: __init__.py  base.py  rs256.py
backend/src/auth/infra/transports/: __init__.py  base.py  bearer.py  cookie.py
backend/src/core/: database.py  schemas.py  utils.py
backend/src/core/config/: __init__.py  classes.py  constants.py  logging.py
backend/src/core/database/: __init__.py  base.py  db_manager.py  types.py  unitofwork.py
backend/src/core/exceptions/: __init__.py  exception_handlers.py  exceptions.py
backend/src/core/gunicorn/: __init__.py  application.py  logger.py
backend/src/core/repository/: __init__.py  base.py  sqla.py  types.py
backend/src/models/: mixins.py  types.py
backend/tests/: conftest.py
backend/tests/api/auth/: test_login.py
scripts/: compose.dev.sh  compose.prod.sh
