[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "sentry-sdk>=2.46.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.31.0",
    "alembic>=1.17.2",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "passlib[argon2]>=1.7.4",
    "types-passlib>=1.7.7.20250602",
    "types-pyjwt>=1.7.1",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
run_dev = "run_dev:main"
run_main = "run_main:main"

[tool.mypy]
files = ["src"]
strict = true
python_version = "3.13"
exclude = ["venv", ".venv", "alembic", "gunicorn"]

[tool.ruff]
src = ["."]
target-version = "py313"
line-length = 79
preview = true
exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors - ошибки стиля кода (PEP 8)
    "W",        # pycodestyle warnings - предупреждения стиля кода (PEP 8)
    "F",        # Pyflakes - статический анализ (неопределённые переменные, импорты)
    "I",        # isort - сортировка и организация импортов
    "B",        # flake8-bugbear - поиск потенциальных багов и плохих практик
    "C4",       # flake8-comprehensions - оптимизирует list/dict/set comprehensions
    "T20",      # flake8-print - предупреждает о print/debug print в коде
    "SIM",      # flake8-simplify - предлагает упрощение кода (if/else, loops)
    "RUF",      # Ruff-specific: Специфичные правила Ruff
    "Q",        # flake8-quotes - проверяет согласованность кавычек
    "UP",       # pyupgrade: Предлагает обновление синтаксиса
    "ARG",      # flake8-unused-arguments: Находит неиспользуемые аргументы
    "D",        # pydocstyle: Проверяет стиль docstring
    "A",        # flake8-builtins - предупреждает об использовании встроенных имён
    "N",        # pep8-naming - проверяет соглашения об именовании (CamelCase классов)
    "C90",      # mccabe: Проверяет сложность кода
    "TC",       # flake8-type-checking: Проверяет импорты для type checking
    "PTH",      # flake8-use-pathlib: Рекомендует pathlib вместо os.path
    "ANN",      # flake8-annotations: Требует аннотации типов
    "PLE",      # Pylint errors: Ошибки от Pylint
    "PLW",      # Pylint warnings: Предупреждения от Pylint
    "FAST",     # FastAPI: Проверяет правильное использование FastAPI
    "ASYNC",    # flake8-async: Проверяет асинхронный код
]
ignore = [
    "RUF002",   # Docstring contains ambiguous cirilic symbols
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"src/core/database/*.py" = ["N805"]
"backend/src/core/database/base.py" = ["N805"]
"alembic/env.py" = ["I001"]

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__tablename__", "__table_args__"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["src"]
#required-imports = ["from __future__ import annotations"]


[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
